--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script type="text/javascript">
     $(document).ready(function(){
          $("#contact-button").click(function(){
-             $("#content").load("activities.html");
+             $("#content").load("contact.html");
          });
     });
   </script>
