Edited main page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <div class="content-wrapper">
       <div id="content">
-        This is the main page
+        Ik hou van Gonda
       </div>
     </main>
 
