Added me as "waiter"

--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
 <body>
   <div class="content-wrapper">
     <header>
-      <div id="header-wrapper">
-        <img src="img/profile_picture.jpg" alt="Profile Picture" height=150px>
-        <h1>M.J.F. Pieters</h1>
-      </div>
+        <img src="img/profile_picture.png" alt="Profile Picture" height=150px>
+        <span>M.J.F. Pieters</span>
     </header>
     <nav>
       <a id="home-button" href="#">Home</a>
