Px to em measurement

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
   <div class="content-wrapper">
     <header>
-        <img src="img/profile_picture.png" alt="Profile Picture" height=150px>
+        <img src="img/profile_picture.png" alt="Profile Picture" height=150em>
         <span>M.J.F. Pieters</span>
     </header>
     <nav>
