Update for mobile devices

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,35 @@
+<!doctype html>
 
-<h2>Contact</h2>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+  <title>Mike Pieters</title>
+  <meta name="description" content="Mike Pieters">
+  <meta name="author" content="Mike Pieters">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
 
+<body>
+  <div class="content-wrapper">
+    <header>
+        <img id='profile-image' src="img/profile_picture.png" alt="Profile Picture" height=150vw>
+        <span>M.J.F. Pieters</span>
+    </header>
+    <nav>
+      <a id="home-button" href="./index.html">Home</a>
+      <a id="contact-button" href="./contact.html">Contact</a>
+    </nav>
+    <main>
+      <h2>
+        Contact
+       </h2>
+     
+       
+    </main>
+    <footer>
+    </footer>
+
+  </div>
+</body>
+</html>
